--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
       - env
 
       # Install golint
-      - go get -u github.com/golang/lint/golint
+      #- go get -u github.com/golang/lint/golint
 
   pre_build: 
     commands:
@@ -34,10 +34,10 @@ phases:
       - go get -t ./...
 
       # Ensure code passes all lint tests
-      - golint -set_exit_status
+      #- golint -set_exit_status
 
       # Check the Go code for common problems with 'go vet'
-      - go vet .
+      #- go vet .
 
       # Run all tests included with our application
       - go test .
