--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,57 +1,43 @@
-version: 0.2
-
-env:
-  variables:
-    # This S3 bucket will be used to store the packaged Lambda deployment bundle.
-    # Make sure to provide a valid S3 bucket name (it must exist already).
-    # The AWS CodeBuild IAM role must allow write access to it.
-    S3_BUCKET: "mjsdemorepo-s3"
-    PACKAGE: "github.com/msimpson/go-dynamo"
-
-phases:
-
-  install:
-    commands:
-
-      # AWS Codebuild Go images use /go for the $GOPATH so let's copy our 
-      # application source code into that directory structure.
-      - mkdir -p "/go/src/$(dirname ${PACKAGE})"
-      - ln -s "${CODEBUILD_SRC_DIR}" "/go/src/${PACKAGE}" 
-      
-      # Print all environment variables (handy for AWS CodeBuild logs)
-      - env
-
-      # Install golint
-      #- go get -u github.com/golang/lint/golint
-
+version: 0.2 
+ 
+phases: 
+ 
+  install: 
+    commands: 
+ 
+      # AWS Codebuild Go images use /go for the $GOPATH so let's symlink our 
+      # application source code into that directory structure. 
+      - ln -s "${CODEBUILD_SRC_DIR}" "/go/src/handler" 
+ 
+      # Install golint 
+      - go get golang.org/x/lint/golint 
+ 
+      # Install Testify to use common assertions and mocks in tests 
+      - go get -u github.com/stretchr/testify 
+ 
   pre_build: 
-    commands:
-
-      # Make sure we're in the project directory within our GOPATH
-      - cd "/go/src/${PACKAGE}"
-
-      # Fetch all dependencies
-      - go get -t ./...
-
-      # Ensure code passes all lint tests
-      #- golint -set_exit_status
-
-      # Check the Go code for common problems with 'go vet'
-      #- go vet .
-
-      # Run all tests included with our application
-      - go test .
-
-  build:
-    commands:
-
-      # Build our go application
-      - go build -o main
-
-      # Package our application with AWS SAM
-      #- aws cloudformation package --template-file template.yml --s3-bucket ${S3_BUCKET} --output-template-file packaged.yml
-
-artifacts:
-  files:
-    #- packaged.yml
-    - main
+    commands: 
+ 
+      # Make sure we're in the project directory within our GOPATH 
+      - cd "/go/src/handler" 
+ 
+      # Fetch all dependencies 
+      - go get ./... 
+ 
+      # Ensure code passes all lint tests 
+      - golint -set_exit_status 
+ 
+      # Check for common Go application problems with 'go tool vet' 
+      - go tool vet . 
+ 
+      # Run all tests included with our application 
+      - go test . 
+ 
+  build: 
+    commands: 
+ 
+      # Build our go application 
+      - go build -o main 
+ 
+ artifacts: 
+  type: zip
