--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,6 +38,11 @@ phases:
  
       # Build our go application 
       - go build -o main 
+
+      #- aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template template-export.yml 
  
- artifacts: 
-  type: zip
+artifacts: 
+  type: zip 
+  files: 
+    - main
+    #- template-configuration.json 
