--- a/Functions/src/WorkerFunc/WorkerFunc.csproj
+++ b/Functions/src/WorkerFunc/WorkerFunc.csproj
@@ -7,7 +7,6 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.4.0" />
-    <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="1.2.0" />
-    <PackageReference Include="AWSSDK.SQS" Version="3.3.100.5" />
+    <PackageReference Include="Amazon.Lambda.SQSEvents" Version="1.1.0" />
   </ItemGroup>
 </Project>
