--- a/Functions/src/WorkerFunc/WorkerFunc.csproj
+++ b/Functions/src/WorkerFunc/WorkerFunc.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.4.0" />
     <PackageReference Include="Amazon.Lambda.SQSEvents" Version="1.1.0" />
+    <PackageReference Include="AWSSDK.Lambda" Version="3.3.100.5" />
   </ItemGroup>
 </Project>
