--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,18 @@
             "options": {
                 "cwd": "${workspaceFolder}/lamb-net/src/lamb-net"
             }
+        },
+        {
+            "type": "typescript",
+            "tsconfig": "cdk\\tsconfig.json",
+            "option": "watch",
+            "problemMatcher": [
+                "$tsc-watch"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
