--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
             },
             "problemMatcher": "$msCompile",
             "options": {
-                "cwd": "${workspaceFolder}/lamb-net/src/lamb-net"
+                "cwd": "${workspaceFolder}/Functions/src/StarterFunc"
             }
         },
         {
