--- a/amp-athena/aws-amplify-vue/.gitignore
+++ b/amp-athena/aws-amplify-vue/.gitignore
@@ -3,7 +3,6 @@ node_modules/**
 src/aws-exports.js
 .amplifyrc
 .awsmobilejs
-/amplify/
 /build/
 npm-debug.log*
 yarn-debug.log*
@@ -27,3 +26,4 @@ dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
+amp-athena/aws-amplify-vue/amplify/team-provider-info.json
