--- a/cdk-alb/package.json
+++ b/cdk-alb/package.json
@@ -16,6 +16,9 @@
     "aws-cdk": "^0.33.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-autoscaling": "^0.33.0",
+    "@aws-cdk/aws-ec2": "^0.33.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^0.33.0",
     "@aws-cdk/cdk": "^0.33.0",
     "source-map-support": "^0.5.9"
   }
