--- a/spot-net/Fun.Joiner/Fun.Joiner.csproj
+++ b/spot-net/Fun.Joiner/Fun.Joiner.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.3.102.2" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.102.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
 </Project>
