--- a/spot-net/cdk/package.json
+++ b/spot-net/cdk/package.json
@@ -16,6 +16,8 @@
     "aws-cdk": "^0.33.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-batch": "^0.33.0",
+    "@aws-cdk/aws-ec2": "^0.33.0",
     "@aws-cdk/aws-sqs": "^0.33.0",
     "@aws-cdk/cdk": "^0.33.0",
     "source-map-support": "^0.5.9"
