cdk: fix stack permissions task maker: use cfn to get queue name

--- a/spot-net/Fun.TaskMaker/Fun.TaskMaker.csproj
+++ b/spot-net/Fun.TaskMaker/Fun.TaskMaker.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.3.102.2" />
+    <PackageReference Include="AWSSDK.CloudFormation" Version="3.3.100.31" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.102.3" />
     <PackageReference Include="AWSSDK.SQS" Version="3.3.100.30" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
