--- a/svc-list/ServiceList.Client/ServiceList.Client.csproj
+++ b/svc-list/ServiceList.Client/ServiceList.Client.csproj
@@ -3,13 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>svc_list</RootNamespace>
+    <RootNamespace>ServiceList.Client</RootNamespace>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.7" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <ProjectReference Include="..\ServiceList.Core\ServiceList.Core.csproj" />
   </ItemGroup>
 
 </Project>
