--- a/svc-list/ServiceList.Client/ServiceList.Client.csproj
+++ b/svc-list/ServiceList.Client/ServiceList.Client.csproj
@@ -3,12 +3,16 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>ServiceList.Client</RootNamespace>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ServiceList.Core\ServiceList.Core.csproj" />
+    <ProjectReference Include="..\ServiceList.Infrastructure\ServiceList.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
 </Project>
