--- a/svc-list/cdk/package.json
+++ b/svc-list/cdk/package.json
@@ -16,6 +16,7 @@
     "aws-cdk": "^0.35.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^0.35.0",
     "@aws-cdk/aws-events-targets": "^0.35.0",
     "@aws-cdk/aws-lambda": "^0.35.0",
     "@aws-cdk/cdk": "^0.35.0",
