finshed lambda and cdk deployment

--- a/svc-list/ServiceList.App.AwsCrawl/src/ServiceList.App.AwsCrawl/ServiceList.App.AwsCrawl.csproj
+++ b/svc-list/ServiceList.App.AwsCrawl/src/ServiceList.App.AwsCrawl/ServiceList.App.AwsCrawl.csproj
@@ -10,5 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\ServiceList.Core\ServiceList.Core.csproj" />
+    <ProjectReference Include="..\..\..\ServiceList.Infrastructure\ServiceList.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
