--- a/svc-list/cdk/package.json
+++ b/svc-list/cdk/package.json
@@ -19,6 +19,7 @@
     "@aws-cdk/aws-dynamodb": "^0.35.0",
     "@aws-cdk/aws-events-targets": "^0.35.0",
     "@aws-cdk/aws-lambda": "^0.35.0",
+    "@aws-cdk/aws-lambda-event-sources": "^0.35.0",
     "@aws-cdk/cdk": "^0.35.0",
     "source-map-support": "^0.5.9"
   }
