fixup checking lists together and add sqs

--- a/svc-list/ServiceList.Infrastructure/ServiceList.Infrastructure.csproj
+++ b/svc-list/ServiceList.Infrastructure/ServiceList.Infrastructure.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.101.27" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.3.100.37" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
