--- a/svc-list/cdk/package.json
+++ b/svc-list/cdk/package.json
@@ -13,14 +13,15 @@
     "@types/node": "8.10.45",
     "typescript": "^3.3.3333",
     "ts-node": "^8.1.0",
-    "aws-cdk": "^0.35.0"
+    "aws-cdk": "^0.36.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-dynamodb": "^0.35.0",
-    "@aws-cdk/aws-events-targets": "^0.35.0",
-    "@aws-cdk/aws-lambda": "^0.35.0",
-    "@aws-cdk/aws-lambda-event-sources": "^0.35.0",
-    "@aws-cdk/cdk": "^0.35.0",
+    "@aws-cdk/aws-dynamodb": "^0.36.0",
+    "@aws-cdk/aws-events-targets": "^0.36.0",
+    "@aws-cdk/aws-lambda": "^0.36.0",
+    "@aws-cdk/aws-lambda-event-sources": "^0.36.0",
+    "@aws-cdk/aws-sns": "^0.36.0",
+    "@aws-cdk/cdk": "^0.36.0",
     "source-map-support": "^0.5.9"
   }
 }
