--- a/ecs-iam/app/package.json
+++ b/ecs-iam/app/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.483.0",
     "express": "^4.16.1",
     "request": "^2.88.0"
   }
