working version of custom runtime

--- a/lambda-runtime/CustomRuntimeFunction/alb-current/src/CustomRuntimeFunction/CustomRuntimeFunction.csproj
+++ b/lambda-runtime/CustomRuntimeFunction/alb-current/src/CustomRuntimeFunction/CustomRuntimeFunction.csproj
@@ -13,9 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.0.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
-        <PackageReference Include="Amazon.Lambda.ApplicationLoadBalancerEvents" Version="1.0.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Amazon.Lambda.Serialization.Json\Amazon.Lambda.Serialization.Json.csproj" />
+    <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.5.0" />
+    <PackageReference Include="Amazon.Lambda.ApplicationLoadBalancerEvents" Version="1.0.0" />
   </ItemGroup>
 </Project>
