--- a/svc-list/ServiceList.Client/ServiceList.Client.csproj
+++ b/svc-list/ServiceList.Client/ServiceList.Client.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
