--- a/app-stream/cdk/.gitignore
+++ b/app-stream/cdk/.gitignore
@@ -1,3 +1,5 @@
+!/bin/*.ts
+
 *.js
 *.d.ts
 node_modules
@@ -5,5 +7,3 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
-
-!bin/*.ts
