--- a/connect-auto/cdk/package.json
+++ b/connect-auto/cdk/package.json
@@ -16,6 +16,7 @@
     "aws-cdk": "^1.3.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.3.0",
     "@aws-cdk/aws-dynamodb": "^1.3.0",
     "@aws-cdk/aws-lambda": "^1.3.0",
     "@aws-cdk/core": "^1.3.0",
