moved payload to string builder this makes functions identical only differences is the Lambda serialization

--- a/lambda-runtime/Net30.Native.Tests/Net30.Native.Tests.csproj
+++ b/lambda-runtime/Net30.Native.Tests/Net30.Native.Tests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Amazon.Lambda.Serialization.Json\Amazon.Lambda.Serialization.Json.csproj" />
+    <ProjectReference Include="..\FakeResponse\FakeResponse.csproj" />
   </ItemGroup>
 
 </Project>
