--- a/dms-stream/cdk/package.json
+++ b/dms-stream/cdk/package.json
@@ -23,6 +23,7 @@
     "@aws-cdk/aws-dms": "^1.8.0",
     "@aws-cdk/aws-ec2": "^1.8.0",
     "@aws-cdk/aws-kinesis": "^1.8.0",
+    "@aws-cdk/aws-kinesisanalytics": "^1.8.0",
     "@aws-cdk/aws-kinesisfirehose": "^1.8.0",
     "@aws-cdk/aws-rds": "^1.8.0",
     "@aws-cdk/aws-s3": "^1.8.0",
