added sdk model and wrote some tests

--- a/lambda-net-ses/func/test/func.Tests/func.Tests.csproj
+++ b/lambda-net-ses/func/test/func.Tests/func.Tests.csproj
@@ -8,8 +8,14 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+        <PackageReference Include="Amazon.Lambda.SimpleEmailEvents" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\func\func.csproj" />
   </ItemGroup>
+  <ItemGroup> 
+  <Content Include="*.json"> 
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+  </Content> 
+</ItemGroup>
 </Project>
