--- a/lambda-net-ses/func/src/func/func.csproj
+++ b/lambda-net-ses/func/src/func/func.csproj
@@ -7,5 +7,6 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.5.0" />
+    <PackageReference Include="Amazon.Lambda.SimpleEmailEvents" Version="1.1.0" />
   </ItemGroup>
 </Project>
