--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 *.zip
+media-cvt-transcode/app/.env
