--- a/lambda-net-ident/idsrv/src/IdentityServer4Demo.csproj
+++ b/lambda-net-ident/idsrv/src/IdentityServer4Demo.csproj
@@ -6,13 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="3.1.0" />
-    
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.0" />
-    
-    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.0" />
-    
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+  </ItemGroup>
+
+    <ItemGroup>
+    <Content Include="../../certs/idsrv.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>  
   </ItemGroup>
 
 </Project>
