fix signing and validation

--- a/lambda-net-ident/func/auth/src/auth/auth.csproj
+++ b/lambda-net-ident/func/auth/src/auth/auth.csproj
@@ -10,4 +10,11 @@
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="1.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="../../../../certs/idsrv.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>  
+  </ItemGroup>
+
 </Project>
