--- a/lambda-net-ident/cdk/package.json
+++ b/lambda-net-ident/cdk/package.json
@@ -25,6 +25,7 @@
     "@aws-cdk/aws-ecr": "^1.31.0",
     "@aws-cdk/aws-ecs": "^1.31.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.31.0",
+    "@aws-cdk/aws-elasticloadbalancingv2-targets": "^1.31.0",
     "@aws-cdk/core": "1.31.0",
     "source-map-support": "^0.5.16"
   }
