--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,7 @@ healthchecksdb
 MigrationBackup/
 *.zip
 media-cvt-transcode/app/.env
+lambda-net-ident/.DS_Store
+lambda-net-ident/.DS_Store
+lambda-net-ident/certs/.DS_Store
+lambda-net-ident/.DS_Store
