--- a/lambda-net-ident/cdk/package.json
+++ b/lambda-net-ident/cdk/package.json
@@ -26,7 +26,10 @@
     "@aws-cdk/aws-ecs": "^1.31.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.31.0",
     "@aws-cdk/aws-elasticloadbalancingv2-targets": "^1.31.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.31.0",
+    "@aws-cdk/aws-s3-deployment": "^1.31.0",
     "@aws-cdk/core": "1.31.0",
+    "parcel-bundler": "^1.12.4",
     "source-map-support": "^0.5.16"
   }
 }
