--- a/.gitignore
+++ b/.gitignore
@@ -351,5 +351,5 @@ MigrationBackup/
 *.zip
 media-cvt-transcode/app/.env
 .DS_Store
-/textract-lambda/func/queueLoad/index.ts
-**/images/
+.DS_Store
+**/images/*
