--- a/textract-lambda/package.json
+++ b/textract-lambda/package.json
@@ -14,9 +14,10 @@
     "@aws-cdk/assert": "1.32.2",
     "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
     "aws-cdk": "1.32.2",
+    "jest": "^24.9.0",
+    "parcel-bundler": "^1.12.4",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
