--- a/textract-lambda/func/processFunction/package.json
+++ b/textract-lambda/func/processFunction/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.48",
-    "@types/node": "^13.11.1"
+    "@types/node": "^13.11.1",
+    "jest": "^25.3.0"
   },
   "dependencies": {
     "aws-sdk": "^2.656.0"
