--- a/secret-rds/pipeline-stack/package.json
+++ b/secret-rds/pipeline-stack/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "api-stack",
+  "name": "pipeline-stack",
   "version": "0.1.0",
   "bin": {
-    "api-stack": "bin/api-stack.js"
+    "pipeline-stack": "bin/pipeline-stack.js"
   },
   "scripts": {
     "build": "tsc",
@@ -21,6 +21,9 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-codebuild": "^1.51.0",
+    "@aws-cdk/aws-codepipeline": "^1.51.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.51.0",
     "@aws-cdk/core": "1.51.0",
     "source-map-support": "^0.5.16"
   }
