--- a/secret-rds/rds-stack/package.json
+++ b/secret-rds/rds-stack/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigatewayv2": "^1.51.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.51.0",
     "@aws-cdk/aws-rds": "^1.51.0",
     "@aws-cdk/core": "1.51.0",
     "@aws-cdk/pipelines": "^1.51.0",
