--- a/kinesis-filter/package.json
+++ b/kinesis-filter/package.json
@@ -11,17 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.61.1",
+    "@aws-cdk/assert": "1.62.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.61.1",
+    "aws-cdk": "1.62.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.61.1",
+    "@aws-cdk/aws-kinesis": "^1.62.0",
+    "@aws-cdk/aws-kinesisanalytics": "^1.62.0",
+    "@aws-cdk/aws-kinesisfirehose": "^1.62.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.62.0",
+    "@aws-cdk/core": "1.62.0",
     "source-map-support": "^0.5.16"
   }
 }
