add cdk pipeline

--- a/xray-demo/func/recordhandler/package.json
+++ b/xray-demo/func/recordhandler/package.json
@@ -15,5 +15,18 @@
   },
   "devDependencies": {
     "jest": "^26.4.2"
+  },
+  "targets": {
+    "cdk-lambda": {
+      "context": "node",
+      "includeNodeModules": {
+        "aws-sdk": false
+      },
+      "sourceMap": false,
+      "minify": false,
+      "engines": {
+        "node": ">= 10"
+      }
+    }
   }
 }
