--- a/xray-demo/func/recordhandler/package.json
+++ b/xray-demo/func/recordhandler/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.760.0",
-    "aws-xray-sdk-core": "^3.2.0"
+    "aws-xray-sdk-core": "^3.2.0",
+    "pino": "^6.7.0"
   },
   "devDependencies": {
     "jest": "^26.4.2"
