--- a/msk-demo/package.json
+++ b/msk-demo/package.json
@@ -11,7 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.72.0",
+    "@aws-cdk/assert": "1.73.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "jest": "^26.4.2",
@@ -21,11 +21,12 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.72.0",
-    "@aws-cdk/aws-ecs": "^1.72.0",
-    "@aws-cdk/aws-lambda": "^1.72.0",
-    "@aws-cdk/aws-msk": "^1.72.0",
-    "@aws-cdk/core": "1.72.0",
+    "@aws-cdk/aws-cloud9": "^1.73.0",
+    "@aws-cdk/aws-ec2": "^1.73.0",
+    "@aws-cdk/aws-ecs": "^1.73.0",
+    "@aws-cdk/aws-lambda": "^1.73.0",
+    "@aws-cdk/aws-msk": "^1.73.0",
+    "@aws-cdk/core": "1.73.0",
     "source-map-support": "^0.5.16"
   }
 }
