--- a/s3-batch/package.json
+++ b/s3-batch/package.json
@@ -14,13 +14,19 @@
     "@aws-cdk/assert": "1.75.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.75.0",
+    "aws-lambda-nodejs-esbuild": "^1.1.3",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.75.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.75.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.75.0",
+    "@aws-cdk/aws-s3": "^1.75.0",
+    "@aws-cdk/aws-stepfunctions": "^1.75.0",
+    "@aws-cdk/aws-stepfunctions-tasks": "^1.75.0",
     "@aws-cdk/core": "1.75.0",
     "source-map-support": "^0.5.16"
   }
