--- a/firehose-load/.gitignore
+++ b/firehose-load/.gitignore
@@ -1,3 +1,4 @@
+!functions/firehoseLoad/index.js
 *.js
 !jest.config.js
 *.d.ts
@@ -6,3 +7,5 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+
