--- a/firehose-load/package.json
+++ b/firehose-load/package.json
@@ -24,6 +24,7 @@
     "@aws-cdk/aws-kinesisfirehose": "^1.91.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.91.0",
     "@aws-cdk/core": "1.91.0",
+    "esbuild": "^0.8.57",
     "source-map-support": "^0.5.16"
   }
 }
