--- a/fis-demo/src/fis-demo-infra/package.json
+++ b/fis-demo/src/fis-demo-infra/package.json
@@ -16,11 +16,13 @@
     "aws-cdk": "2.0.0-rc.18",
     "esbuild": "^0.12.20",
     "jest": "^26.4.2",
+    "prisma": "^2.29.1",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@prisma/client": "^2.29.1",
     "aws-cdk-lib": "2.0.0-rc.18",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
